# pan-os-mcp

./: .env.example  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .windsurfrules  .yamllint  Dockerfile  Makefile  PRD.md  README.md  TODO.md  _config.yml  debug_test.py  example_config.yml  example_mkdocs.yml  main.py  mkdocs.yml  mypy.ini  package-lock.json  package.json  print-types.ts  pyproject.toml  requirements.txt  run_server_debug.py  test-client.js  test_address_objects.py  test_api_connection.py  test_client.py  tsconfig.json
.github/: branch-protection.json
.github/workflows/: ansible-lint.yml  ansible-test.yml  ci.yml  code-quality.yml  mkdocs-build-deploy.yml  pr_agent.yml  yamllint.yml
.husky/: pre-commit
docker/: Dockerfile
docs/: api-reference.md  architecture.md  client-connection.md  contributing.md  development-guide.md  index.md  main_py.md  mcp_connection.md  mcp_sdk_usage.md  palo_alto_api_py.md  testing.md  tls-termination.md  tools_py.md  troubleshooting.md
docs/css/: termynal.css
docs/examples/: mermaid.md
docs/fixes/: broken_resource_error.md  endpoint_path_standardization.md  mcp_session_management.md  mcp_session_management_consolidated.md  path_inconsistency_fix.md  session_id_analysis.md  session_management_fix.md  sse_path_inconsistency.md
docs/guide/: configuration.md  installation.md  usage.md
docs/js/: mermaid-init.js
docs/modules/: config.md  pan_os_api.md  server.md
fixes/: sdk-version-import-issues.md
infrastructure/compose/: docker-compose.yml
infrastructure/docker/: Dockerfile
k8s/: deployment.yaml  ingress.yaml  ingressroute.yaml  middleware-cors.yaml  middleware-rate-limit.yaml  middleware-redirect.yaml  middleware-security.yaml  namespace.yaml  network-policy.yaml  service.yaml  traefik-serviceaccount.yaml  traefik.yaml
scripts/: check_code_quality.sh  generate_api_key.py  run_debug.sh  run_http_server.sh  run_with_env_file.sh  run_with_inspector.sh  test_tools.sh
src/: index.ts  init.ts  main.py  main.ts  palo_alto_api.py  tools.py
src/palo_alto_mcp/: __init__.py  __main__.py  config.py  pan_os_api.py  server.py
src/panos_mcp/: __init__.py  __main__.py  config.py  main.py  panos_api.py
src/tools/: address-objects.ts  security-policies.ts  security-zones.ts
src/utils/: helpers.ts  pan-os-api.ts  pan-os-sdk-client.ts
tests/: __init__.py  server.test.ts  test-dev-show-system-info.mjs
