[project]
name = "panos-mcp"
version = "0.1.0"
description = "PAN-OS MCP Server"
authors = [
    {name = "Calvin Remsburg",email = "cremsburg@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sse-starlette (>=1.6.5,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
ruff = "^0.11.2"
isort = "^5.13.2"
pytest = "^8.0.0"
black = "^24.3.0"
mypy = "^1.8.0"
pre-commit = "^3.5.0"
# Pin checkov to a specific version to avoid dependency conflicts
checkov = "2.5.9"
pytest-asyncio = "^0.26.0"

[tool.ruff]
line-length = 128
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["panos_mcp"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.black]
line-length = 164
target-version = ["py311"]
